--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,25 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
+    <!--配置对应高德地图的key-->
     <application
+        android:name=".DesignShotAPP"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/designshoticon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/designshoticon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data android:name="com.amap.api.v2.apikey"
+                   android:value="568fe34f9b98e32c67a2e0642c6df75c"/>
+        <activity
+            android:name="com.zaaach.citypicker.CityPickerActivity"
+            android:theme="@style/CityPicker.NoActionBar"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustPan"/>
         <activity
             android:name=".MainActivity"
             android:theme="@style/activity_main_theme">
@@ -61,12 +72,17 @@
         <activity
             android:name=".ShowPlanActivity"
             android:label="@string/show_plan"
-            android:theme="@style/activity_log_and_create_theme">
+            android:theme="@style/activity_log_and_create_theme.show_theme">
         </activity>
         <activity
             android:name=".ShowLocationActivity"
             android:label="@string/show_location"
-            android:theme="@style/activity_log_and_create_theme">
+            android:theme="@style/activity_log_and_create_theme.show_theme">
+        </activity>
+        <activity
+            android:name=".SearchCityActivity"
+            android:label="@string/weather_city"
+            android:theme="@style/activity_log_and_create_theme.show_theme">
         </activity>
     </application>
 
